# luna-webappmanager

./: .gitignore  CMakeLists.txt  COPYING  README.md
doc/: Doxyfile
files/pkgconfig/: webapp-plugin.pc.in
files/sysbus/: com.palm.luna-apps.json.prv.in  com.palm.luna-apps.json.pub.in  com.palm.luna-apps.role.json  org.webosports.webappmanager.api.json  org.webosports.webappmanager.container.json.in  org.webosports.webappmanager.json.prv.in  org.webosports.webappmanager.json.pub.in  org.webosports.webappmanager.perm.json  org.webosports.webappmanager.role.json  org.webosports.webappmanager.role.json.in  org.webosports.webappmanager.service  org.webosports.webappmanager.service.in  org.webosports.webappmanager.service.pub.in
files/systemd/: LunaWebAppManager.service  luna-webappmanager.service
lib/: CMakeLists.txt  applicationenvironment.cpp  applicationenvironment.h  applicationplugin.h  baseextension.cpp  baseextension.h
src/: CMakeLists.txt  activity.cpp  activity.h  applicationdescription.cpp  applicationdescription.h  lunaserviceutils.cpp  main.cpp  resources.qrc  systemtime.cpp  systemtime.h  utils.cpp  utils.h  webapplauncher.cpp  webapplauncher.h  webapplication.cpp  webapplication.h  webapplicationplugin.cpp  webapplicationplugin.h  webapplicationredirecthandler.cpp  webapplicationredirecthandler.h  webapplicationwindow.cpp  webapplicationwindow.h  webapplicationwindowbase.cpp  webapplicationwindowbase.h  webapplicationwindowfactory.cpp  webapplicationwindowfactory.h  webappmanager.cpp  webappmanager.h  webappmanagerservice.cpp  webappmanagerservice.h
src/extensions/: BluetoothManager.js  InAppBrowser.js  PalmServiceBridge.js  PalmSystem.js  PalmSystemBridge.js  bluetoothmanager.cpp  bluetoothmanager.h  deviceinfo.cpp  deviceinfo.h  inappbrowserextension.cpp  inappbrowserextension.h  lunaservicemgr.h  palmservicebridgeextension.cpp  palmservicebridgeextension.h  palmsystemextension.cpp  palmsystemextension.h  wifimanager.cpp  wifimanager.h
src/extensions/bluetooth/: agentadaptor.cpp  agentadaptor.h  bluetooth.cpp  bluetooth.h  devicemodel.cpp  devicemodel.h
src/js/: webos.js
src/plugins/: baseplugin.cpp  baseplugin.h  lunaservicemgr.cpp  palmservicebridgeplugin.cpp  palmservicebridgeplugin.h  palmsystemplugin.cpp  palmsystemplugin.h
src/qml/: ApplicationContainer.qml  HeadlessWindow.qml  InAppBrowser.qml  LoadingBackground.qml  PalmServiceBridge.js  UserAgent.qml  Window.qml  extensionmanager.js  main.qml  pluginmanager.js  setupViewport-legacy.js  setupViewport.js  webos-api.js
src/webkitbundle/: CMakeLists.txt  plugin.cpp  webkitbundle.cpp  webkitbundle.h
tests/: tst_palmservicebridge.html  webos.js
